--- a/preprocessing/cohen_retina_denovo_process/process/08_recap_scrnaseq_endog_analysis/recap.ipynb
+++ b/preprocessing/cohen_retina_denovo_process/process/08_recap_scrnaseq_endog_analysis/recap.ipynb
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "'/home/mcn26/palmer_scratch/tabula_data/scMPRA'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,14 +305,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "... reading from cache file cache/home-mcn26-palmer_scratch-tabula_data-scMPRA-data-sc_transcriptome_data-retina_matrix_r1-matrix.h5ad\n",
+      "... writing an h5ad cache file to speedup reading next time\n",
       "... writing an h5ad cache file to speedup reading next time\n"
      ]
     }
@@ -331,14 +331,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/tmp.Asv4LyM1Wg/ipykernel_1624007/2756604280.py:1: FutureWarning: Use anndata.concat instead of AnnData.concatenate, AnnData.concatenate is deprecated and will be removed in the future. See the tutorial for concat at: https://anndata.readthedocs.io/en/latest/concatenation.html\n",
+      "/tmp/tmp.U7arkq5g33/ipykernel_2944807/2756604280.py:1: FutureWarning: Use anndata.concat instead of AnnData.concatenate, AnnData.concatenate is deprecated and will be removed in the future. See the tutorial for concat at: https://anndata.readthedocs.io/en/latest/concatenation.html\n",
       "  adata= adata_1.concatenate(adata_2, batch_key='sample')\n"
      ]
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f\"{data_root}/retina_rep1_cell_names\", \"w\") as f:\n",
+    "with open(f\"{data_root}/raw_recap/cohen_retina/cell_names/retina_rep1_cell_names\", \"w\") as f:\n",
     "    for name in replicate_1:\n",
     "        f.write(f\"{name}\\n\")"
    ]
@@ -431,7 +431,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f\"{data_root}/retina_rep2_cell_names\", \"w\") as f:\n",
+    "with open(f\"{data_root}/raw_recap/cohen_retina/cell_names/retina_rep2_cell_names\", \"w\") as f:\n",
     "    for name in replicate_2:\n",
     "        f.write(f\"{name}\\n\")"
    ]
